--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,6 @@ Pipfile.lock
 # coverage report files
 *.coverage
 _coverage/
+
+src/lib/snarkyjs/src/bindings/compiled/
+src/lib/snarkyjs/src/bindings/compiled/**/!*.d.*!
